added non-dynamic answer selecting functionality

--- a/index.html
+++ b/index.html
@@ -38,34 +38,13 @@
                 </section>
 
             </section>
-
-
-
-
-
-
-
-
-
-
-
-            <!-- <section id="question-screen" style="display: none;">
-                <h3 id="questionText">Question goes here </h3>>
-                <button id="option1">Answer 1 </button>
-                <button>Answer 2</button>
-                <button>Answer 3</button>
-                <button>Answer 4</button>
-            </section>
-
-            <section id="submitScore" style="display: none;">
-                Final Score
-                <button>Submit Score </button>
-            </section>
-            <section id="ViewScores" style="display: none;">
-                View Highscores
-            </section> -->
+        
         </main>
     </div>
+    <footer>
+       <h1 id="grade"></h1> 
+    </footer>
+
     <script src='./assets/js/script.js'></script>
 </body>
 
